--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,12 @@
       rel="stylesheet"
     />
 
+    <!-- Icons two tones -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Material+Icons+Two+Tone"
+    />
+
     <title>Abaco Systems Technologies.</title>
   </head>
   <body>
